добавление обработчиков апи кафка (достижение fetch)